syntax = "proto3";

package user;

service UserService {
    rpc GetUserByUsername(UsernameRequest) returns (OneUserResponse);
}

message UsernameRequest {
    string username = 1;
}

message OneUserResponse {
    string _id = 1;
    string username = 2;
    string password = 3;
    string fullname = 4;
}